--- a/lagy.html
+++ b/lagy.html
@@ -244,6 +244,8 @@ md:flex-row gap-cols-2">
 
 </section>
 
+<!-- last heroz -->
+
 <section class="lg:flex bg-mybg1 md:place-content-center">
   <div class="p-10 w-1/2 ml-32 mt-32 md:place-content-center">
     <h1 class="text-6xl font-bold text-white p-2">Download the<br> LazyPay app to<br> get started</h1>
@@ -258,6 +260,7 @@ md:flex-row gap-cols-2">
       <input class="bg-white border-hidden" placeholder="Enter Your Mobile" type="text">
       <button class="bg-paycolor p-2 rounded-lg text-white text-xl ml-10">Get aap</button>
     </div>
+    <p class="mt-6 text-paycolor text-lg">Please enter a valid mobile number</p>
   </div>
 
   <div class="mt-24">
