--- a/lagy.html
+++ b/lagy.html
@@ -103,7 +103,7 @@ md:flex-row gap-cols-2">
         <button class="text-2xl bg-paycolor rounded-lg w-36 h-14 mt-4 text-white font-bold">know more</button>
     </div>
     <div class="w-1/2 mx-32 mt-16">
-        <video width="260" class="border-myborder border-8 rounded-lg mx-20" controlslist="nofullscreen nodownload noremoteplayback" autoplay>
+        <video width="260" class="border-myborder border-8 rounded-lg mx-20 sm:place-content-center" controlslist="nofullscreen nodownload noremoteplayback" autoplay>
             <source src="./First.webm">
           </video>
     </div>
